--- a/resources/views/Newsletter/Components/NewsletterInput.twig
+++ b/resources/views/Newsletter/Components/NewsletterInput.twig
@@ -3,7 +3,7 @@
         <div class="container">
             <form id="newsletter-input-form">
                 <div class="row">
-                    <div class="col-xs-12 m-t-1" v-if="title">
+                    <div class="col-xs-12" v-if="title">
                         <span class="h1">${ title }</span>
                     </div>
                     <div class="col-xs-12 m-t-1" v-if="subTitle">
@@ -14,36 +14,49 @@
                 <div class="row">
                     <div class="col-xs-6" v-if="showNameInputs">
                         <div class="input-unit">
-                            <label for="first_name_input">{{ trans("Ceres::Template.newsletterFirstName") }}</label>
-                            <input type="text" id="first_name_input" v-model="firstName">
+                            <label for="first-name-input">{{ trans("Ceres::Template.newsletterFirstName") }}</label>
+                            <input type="text" id="first-name-input" v-model="firstName">
                         </div>
                     </div>
                     <div class="col-xs-6 p-l-0" v-if="showNameInputs">
                         <div class="input-unit">
-                            <label for="last_name_input">{{ trans("Ceres::Template.newsletterLastName") }}</label>
-                            <input type="text" id="last_name_input" v-model="lastName">
+                            <label for="last-name-input">{{ trans("Ceres::Template.newsletterLastName") }}</label>
+                            <input type="text" id="last-name-input" v-model="lastName">
                         </div>
                     </div>
 
                     <div class="col-xs-12">
                         <div class="input-group">
                             <div class="input-unit" data-validate="mail">
-                                <label for="email_input_id">{{ trans("Ceres::Template.newsletterEmail") }} *</label>
-                                <input type="email" id="email_input_id" v-model="email">
-                            </div>
-                            <div class="input-group-btn p-l-1">
-                                <button type="button" class="btn btn-primary btn-newsletter" @click="validateData" :disabled="isDisabled">
-                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                </button>
+                                <label for="email-input-id">{{ trans("Ceres::Template.newsletterEmail") }} *</label>
+                                <input type="email" id="email-input-id" v-model="email">
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-xs-12">
-                        <label for="privacy-policy-accept" class="form-check-label" data-validate>
-                            <input type="checkbox" class="form-check-input" id="privacy-policy-accept" :checked="value">
-                            AGBs bestätigen bla bla
+                    <div class="col-xs-12" v-if="showPrivacyPolicyCheckbox">
+                        <label for="privacy-policy-accept-id" class="form-check-label" data-validate>
+                            <input type="checkbox" class="form-check-input" id="privacy-policy-accept-id" name="privacy-policy-accept" v-model="privacyPolicyValue">
+                            <small>
+                                {% autoescape false %}
+                                    {% set policyContent %}<!--
+                                        --><a href="{{ urls.privacyPolicy }}" target="_blank">
+                                            <span>{{ trans("Ceres::Template.checkoutPrivacyPolicy", {"hyphen": "&shy;"}) }}</span>
+                                        </a><!--
+                                    -->{% endset %}
+                                    {{ trans('Ceres::Template.newsletterAcceptPrivacyPolicy', {"policy": policyContent} ) }}
+                                {% endautoescape %}
+                            </small>
                         </label>
+                    </div>
+
+                    <div class="col-xs-12 m-t-1">
+                         <div class="input-group-btn">
+                            <button type="button" class="btn btn-primary btn-block" @click="validateData" :disabled="isDisabled">
+                                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                {{ trans('Ceres::Template.newsletterSubscribeButtonLabel') }}
+                            </button>
+                         </div>
                     </div>
 
                 </div>
