--- a/resources/views/Newsletter/NewsletterOptInConfirmation.twig
+++ b/resources/views/Newsletter/NewsletterOptInConfirmation.twig
@@ -7,11 +7,10 @@
 
 {% block PageBody %}
 
-    <div class="page-content basket order-return container-max m-b-3 m-t-1">
+    <div class="page-content container-max m-b-3 m-t-1">
         <div class="row m-b-3">
             <div class="col-xs-12">
-                <h2 class="h1">{{ trans("Ceres::Template.returnConfirmationThanks") }}</h2>
-                <p>Ihre Email-Adresse wurde bestätigt.</p>
+                <p>{{ trans('Ceres::Template.newsletterOptInMessage') }}</p>
             </div>
         </div>
         <hr>
