--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -38,7 +38,8 @@
             </div>
 
             <!-- STORE SPECIALS -->
-            <item-store-special v-if="storeSpecial || itemData.variation.bundleType == 'bundle'" :store-special="storeSpecial"
+            <item-store-special v-if="storeSpecial || itemData.variation.bundleType == 'bundle'"
+                                :store-special="storeSpecial"
                                 :recommended-retail-price="itemData.prices.rrp"
                                 :variation-retail-price="itemData.prices.default"
                                 :decimal-count="decimalCount"
