--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -9,6 +9,13 @@
 {% set itemListId    = widget.settings.tagId.mobile %}
 {% set itemsPerPage  = widget.settings.itemsPerPage.mobile %}
 
+{% if itemsPerPage is empty or itemsPerPage > 4 %}
+    {% set itemsPerPage = 4 %}
+{% elseif itemsPerPage < 1 %}
+    {% set itemsPerPage = 1 %}
+{% endif %}
+
+
 {% if listType == "category" %}
     {% set itemListId = categoryId %}
     {{ Twig.set("category", Twig.call("services.category.get", [categoryId])) }}
