--- a/resources/scss/ceres/components/_alerts.scss
+++ b/resources/scss/ceres/components/_alerts.scss
@@ -6,6 +6,15 @@
 	right:.5rem;
 }
 
+.alert {
+	@include media-breakpoint-up(sm) {
+	  width: 400px;
+	}
+	@include media-breakpoint-up(xs) {
+	  width: 100%;
+	}
+}
+
 .password-info {
 
 	padding: 10px !important;
