--- a/resources/scss/ceres/components/_notifications.scss
+++ b/resources/scss/ceres/components/_notifications.scss
@@ -3,4 +3,9 @@
     position: fixed;
     right: .5rem;
     top: 10rem;
+
+    @include media-breakpoint-up(xs) {
+        width: 100%;
+        padding: 0 15px;
+    }
 }
