--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -13729,6 +13729,16 @@ Custom classes
   right: .5rem;
 }
 
+.alert {
+  width: 100%;
+}
+
+@media (min-width: 544px) {
+  .alert {
+    width: 400px;
+  }
+}
+
 .password-info {
   padding: 10px !important;
 }
@@ -14019,6 +14029,8 @@ Custom classes
   position: fixed;
   right: .5rem;
   top: 10rem;
+  width: 100%;
+  padding: 0 15px;
 }
 
 .popper {
