--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -8,6 +8,7 @@
 
 // Root directory
 
+
 $root-directory: '..' !default;
 
 // Flags settings
@@ -11912,6 +11913,15 @@ Custom classes
 	right:.5rem;
 }
 
+.alert {
+	@include media-breakpoint-up(sm) {
+	  width: 400px;
+	}
+	@include media-breakpoint-up(xs) {
+	  width: 100%;
+	}
+}
+
 .password-info {
 
 	padding: 10px !important;
@@ -12230,6 +12240,11 @@ Custom classes
     position: fixed;
     right: .5rem;
     top: 10rem;
+
+    @include media-breakpoint-up(xs) {
+        width: 100%;
+        padding: 0 15px;
+    }
 }
 .popper {
 	max-width: $popover-max-width;
