Korrektur ccb638cc352408e91cdd408f00665a1b9c28c8c9 Redesign Alterts

--- a/resources/scss/ceres/components/_notifications.scss
+++ b/resources/scss/ceres/components/_notifications.scss
@@ -4,8 +4,9 @@
     right: .5rem;
     top: 10rem;
 
-    @include media-breakpoint-up(xs) {
+    @include media-breakpoint-down(xs) {
         width: 100%;
         padding: 0 15px;
+        right: auto;
     }
 }
