CHANGE OrderReturnItem.twig - remove interpolation from attribute bindings

--- a/resources/views/OrderReturn/Components/OrderReturnItem.twig
+++ b/resources/views/OrderReturn/Components/OrderReturnItem.twig
@@ -27,7 +27,7 @@
 			<div class="col-xs-3 col-sm-2 order-return-container">
 				<div class="order-return-image-container">
 					<a :href="orderItemURL">
-						<img class="order-return-image" :src="orderItemImage" :alt="${ orderItem | itemBundleName }" :title="${ orderItem | itemBundleName }">
+						<img class="order-return-image" :src="orderItemImage" :alt="orderItem | itemBundleName" :title="orderItem | itemBundleName">
 					</a>
 				</div>
 			</div>
