ADD correct styles

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -119,6 +119,11 @@ a:active {
     }
 }
 
+.content-center {
+    margin: 0 auto;
+    float: none;
+}
+
 .float-right {
     float: right !important;
 }
