--- a/resources/views/Newsletter/NewsletterOptOut.twig
+++ b/resources/views/Newsletter/NewsletterOptOut.twig
@@ -20,8 +20,10 @@
                         <input type="email" name="email" class="form-control" id="email-input-id">
                     </div>
 
+                    <hr>
+
                     <span class="input-group-btn">
-                        <button type="submit" class="btn btn-primary btn-block">
+                        <button type="submit" class="btn btn-primary btn-right btn-medium btn-xs-max-width">
                             <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                             {{ trans("Ceres::Template.newsletterUnsubscribeButtonLabel") }}
                         </button>
