--- a/resources/views/Newsletter/Components/NewsletterInput.twig
+++ b/resources/views/Newsletter/Components/NewsletterInput.twig
@@ -53,7 +53,7 @@
                     <div class="col-xs-12 m-t-1">
                          <div class="input-group-btn">
                             <button type="button" class="btn btn-primary btn-block" @click="validateData" :disabled="isDisabled">
-                                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                <i v-waiting-animation="isDisabled" class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 {{ trans('Ceres::Template.newsletterSubscribeButtonLabel') }}
                             </button>
                          </div>
