--- a/resources/views/Newsletter/NewsletterOptOut.twig
+++ b/resources/views/Newsletter/NewsletterOptOut.twig
@@ -23,7 +23,7 @@
                     <hr>
 
                     <span class="input-group-btn">
-                        <button type="submit" class="btn btn-primary btn-right btn-medium btn-xs-max-width">
+                        <button type="submit" v-waiting-animation-infinite class="btn btn-primary btn-right btn-medium btn-xs-max-width">
                             <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                             {{ trans("Ceres::Template.newsletterUnsubscribeButtonLabel") }}
                         </button>
