--- a/resources/views/Widgets/Common/NewsletterWidget.twig
+++ b/resources/views/Widgets/Common/NewsletterWidget.twig
@@ -1,5 +1,6 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
+{% set appearance = widget.settings.appearance.mobile %}
 {% set title = widget.settings.title.mobile | json_encode %}
 {% set subTitle = widget.settings.subTitle.mobile | json_encode %}
 {% set showNameInputs = widget.settings.showNameInputs.mobile | json_encode %}
@@ -7,6 +8,6 @@
 
 <div class="widget">
     <div class="widget-inner">
-        <newsletter-input :title="{{ title }}" :sub-title="{{ subTitle }}" :show-name-inputs="{{ showNameInputs }}" :show-privacy-policy-checkbox="{{ showPrivacyPolicyCheckbox }}"></newsletter-input>
+        <newsletter-input appearance="{{ appearance }}" :title="{{ title }}" :sub-title="{{ subTitle }}" :show-name-inputs="{{ showNameInputs }}" :show-privacy-policy-checkbox="{{ showPrivacyPolicyCheckbox }}"></newsletter-input>
     </div>
 </div>
