FIX newsletter missing parts

--- a/resources/views/Newsletter/NewsletterOptOut.twig
+++ b/resources/views/Newsletter/NewsletterOptOut.twig
@@ -7,7 +7,7 @@
 
 {% block PageBody %}
 
-    <form action="/newsletter-opt-out-confirmation">
+    <form action="/newsletter/unsubscribe" method="POST">
         <div class="container-max page-content">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-lg-6 m-b-3 content-center">
