add white space to orderpropertygroup

--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -7910,6 +7910,10 @@ button.close {
   @include text-hide();
 }
 
+.text-wrap {
+  white-space: normal;
+}
+
 // scss-lint:disable ImportantRule
 
 //
