--- a/resources/views/Item/Components/OrderPropertyListGroup.twig
+++ b/resources/views/Item/Components/OrderPropertyListGroup.twig
@@ -8,7 +8,7 @@
                 <div class="h4">
                     ${ propertyGroup.group.names.name }:
                 </div>
-                <p class="text-muted">
+                <p class="text-muted text-wrap">
                     ${ propertyGroup.group.names.description }
                 </p>
             </div>
