--- a/resources/views/MyAccount/Components/ChangePaymentMethod.twig
+++ b/resources/views/MyAccount/Components/ChangePaymentMethod.twig
@@ -76,7 +76,7 @@
                                             <div class="icon">
                                                 <div class="square-container">
                                                     <div class="square-inner center-xy">
-                                                        <img :src="paymentProvider.icon :alt="paymentProvider.name" :title="paymentProvider.name"">
+                                                        <img :src="paymentProvider.icon" :alt="paymentProvider.name" :title="paymentProvider.name">
                                                     </div>
                                                 </div>
                                             </div><!--
