--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -9,6 +9,7 @@
                 <div class="col-md-7 single-leftside">
                     <div class="row">
                         <div class="col-xs-12">
+                            {% if <slot name="ItemListContainer"></slot>|trim is empty %}
                             <item-image-carousel image-url-accessor="url" template="#vue-item-image-carousel"></item-image-carousel>
                         </div>
                     </div>
