--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -44,7 +44,7 @@
                            aria-label="toggle search"
                            data-toggle="collapse"
                            href="#searchBox"
-                           aria-expanded="{% if services.template.isSearch() %}true{% else %}false{% endif %}"
+                           aria-expanded="false"
                            aria-controls="searchBox"
                            data-parent="#controlsList">
                             <span class="anicon-search-item" aria-hidden="true"></span>
@@ -100,7 +100,7 @@
 
 <div class="container-max page-header">
     <div class="row">
-        <div id="searchBox" class="cmp cmp-search-box collapse {% if services.template.isSearch() %} in {% endif %}">
+        <div id="searchBox" class="cmp cmp-search-box collapse">
             <item-search template="#vue-item-search"></item-search>
         </div>
 
