CHANGE _anicon.scss - the background color of the glasses dot is now finished with the properly sass variable

--- a/resources/scss/ceres/components/_anicon.scss
+++ b/resources/scss/ceres/components/_anicon.scss
@@ -67,7 +67,7 @@
             bottom: 0;
             right: 0;
             margin: auto;
-            background: $gray-dark;
+            background: $top-bar-bg;
             border: 1px solid $white;
             transform-origin: 50% 50%;
         }
