--- a/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
@@ -27,7 +27,7 @@
                 :selected-state-id="value.stateId"
                 @country-changed="onSelectedCountryChanged($event)"
                 @state-changed="emitInputEvent('stateId', $event)"
-                :country-list="{{ services.country.getActiveCountriesList() | json_encode() }}"
+                :country-list="{{ services.country.getActiveCountriesList() | filterFields(['id','currLangName', 'isoCode2', 'states.id', 'states.name']) | json_encode }}"
                 :address-type="addressType">
             </country-select>
         </div>
