--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -1,3 +1,5 @@
+{% import "Ceres::Basket.Macros.AddToBasket" as AddToBasket %}
+
 {% set itemData = config("Ceres.item.data") | split(', ') %}
 {% set enabledRoutes = config("IO.routing.enabled_routes") | split(', ') %}
 {% set shippingCat = config("Ceres.global.shippingCostsCategoryId") %}
@@ -97,13 +99,17 @@
 
                     <div class="row m-y-1">
                         <slot name="BeforeAddToBasket"></slot>
-                        <add-to-basket
-                                template="#vue-add-to-basket"
-                                v-if="currentVariation.filter.isSalable"
-                                :item="$store.state.item.variation.documents[0].data"
-                                :show-quantity="true"
-                                :missing-order-properties="variationMissingProperties"
-                                :is-variation-selected="isVariationSelected"></add-to-basket>
+
+                        {{ AddToBasket.printVueComponent(
+                            "currentVariation",
+                            false,
+                            true,
+                            {
+                                "v-if": "currentVariation.filter.isSalable",
+                                "missing-order-properties":"variationMissingProperties",
+                                "is-variation-selected": "isVariationSelected"
+                            }
+                        ) }}
                         <slot name="AfterAddToBasket"></slot>
                     </div>
 
